# module-ffmpeg-core

./: .gitignore  CMakeLists.txt  app.js  jest.config.js  package.json  plugin.json  pnpm-lock.yaml  test.js  tsconfig.json  tsconfig.release.json  tsconfig.test.json  vcpkg.json
ffmpeg-api-lib/: CMakeLists.txt
ffmpeg-api-lib/encoder/: Encoders.cpp  Encoders.h
ffmpeg-api-lib/entity/: StreamContext.cpp  StreamContext.h
ffmpeg-api-lib/manager/: MediaManager.cpp  MediaManager.h  SyncClock.cpp  SyncClock.h
ffmpeg-api-lib/utils/: MediaProcessor.cpp  MediaProcessor.h  TimerSleep.cpp  TimerSleep.h
ffmpeg-api-test/: CMakeLists.txt  test_media_processor.cpp
lib/: index.ts
node-api/: MediaManagerWrapper.cpp  MediaManagerWrapper.h
scripts/: pack.mjs
test/: test_player.test..ts
utils/: native_loader.ts
worker/: index.js  index.ts
